--- a/res/layout/full_results_list.xml
+++ b/res/layout/full_results_list.xml
@@ -1,14 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:paddingTop="?android:attr/actionBarSize">
-
-    <ListView
+<ListView xmlns:android="http://schemas.android.com/apk/res/android"
         android:id="@android:id/list"
-        android:background="@android:color/white"
         android:layout_height="match_parent"
-        android:layout_width="match_parent" />
-</LinearLayout>
+        android:layout_width="match_parent"
+        android:divider="@drawable/list_divider"
+        android:dividerHeight="1px" />
