--- a/res/values/dimens.xml
+++ b/res/values/dimens.xml
@@ -43,4 +43,5 @@
     <dimen name="medium">21sp</dimen>
     <dimen name="small_2">18sp</dimen>
     <dimen name="small">15sp</dimen>
+    <dimen name="tiny">9sp</dimen>
 </resources>
