Adds GPX trace mode and filename prefs

--- a/res/xml/preferences.xml
+++ b/res/xml/preferences.xml
@@ -33,6 +33,17 @@
             android:summary="@string/settings_mapsource_summary"
             android:title="@string/settings_mapsource" />
 
+        <CheckBoxPreference
+            android:key="@string/settings_mock_gpx_key"
+            android:summary="@string/settings_mock_gpx_summary"
+            android:title="@string/settings_mock_gpx_title" />
+
+        <EditTextPreference
+            android:defaultValue="@string/settings_mock_gpx_filename_default_value"
+            android:key="@string/settings_mock_gpx_filename_key"
+            android:summary="@string/settings_mock_gpx_filename_summary"
+            android:title="@string/settings_mock_gpx_filename_title" />
+
     </PreferenceCategory>
 
     <PreferenceCategory android:title="@string/settings_zoom_title">
