--- a/res/xml/preferences.xml
+++ b/res/xml/preferences.xml
@@ -44,6 +44,13 @@
             android:summary="@string/settings_mock_gpx_filename_summary"
             android:title="@string/settings_mock_gpx_filename_title" />
 
+        <com.mapzen.widget.EditIntPreference
+            android:defaultValue="1000"
+            android:inputType="number"
+            android:key="@string/settings_location_update_interval_key"
+            android:summary="@string/settings_location_update_interval_summary"
+            android:title="@string/settings_location_update_interval_title" />
+
     </PreferenceCategory>
 
     <PreferenceCategory android:title="@string/settings_zoom_title">
