--- a/res/layout/direction_list_item.xml
+++ b/res/layout/direction_list_item.xml
@@ -1,33 +1,31 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<RelativeLayout
+<LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:padding="8dp">
+    android:padding="8dp"
+    android:orientation="horizontal">
 
     <ImageView
         android:id="@+id/icon"
-        android:layout_alignParentLeft="true"
-        android:layout_centerVertical="true"
         android:layout_width="24dp"
         android:layout_height="24dp"
         android:contentDescription="@string/route_description" />
 
     <TextView
         android:id="@+id/simple_instruction"
-        android:layout_toRightOf="@id/icon"
-        android:layout_centerVertical="true"
         android:layout_marginLeft="8dp"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content"
+        android:layout_weight=".70"
+        android:layout_gravity="left" />
 
     <com.mapzen.widget.DistanceView
         android:id="@+id/distance"
-        android:layout_alignParentRight="true"
-        android:layout_centerVertical="true"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_gravity="right"
         android:textColor="#ccc" />
 
-</RelativeLayout>
+</LinearLayout>
