--- a/res/layout/instruction.xml
+++ b/res/layout/instruction.xml
@@ -53,7 +53,7 @@
         android:fontFamily="sans-serif-regular"
         android:textAlignment="center"
         android:textColor="@color/brown"
-        android:textSize="@dimen/big"
+        android:textSize="@dimen/small"
         android:paddingLeft="@dimen/instruction_horizontal_padding"
         android:layout_height="wrap_content" />
 
@@ -63,7 +63,7 @@
         android:layout_width="0dip"
         android:layout_weight="1"
         android:textColor="@color/brown"
-        android:textSize="@dimen/big"
+        android:textSize="@dimen/small"
         android:layout_margin="@dimen/default_margin"
         android:visibility="gone" />
 
