resolves the breaking of distance view in nav mode

--- a/res/layout/instruction.xml
+++ b/res/layout/instruction.xml
@@ -36,8 +36,8 @@
 
         <TextView
             android:id="@+id/distance_instruction"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:fontFamily="sans-serif-condensed"
             android:textStyle="bold"
             android:textColor="@color/brown" />
