--- a/res/layout/instruction.xml
+++ b/res/layout/instruction.xml
@@ -14,7 +14,7 @@
         android:background="@android:color/transparent" />
 
     <LinearLayout
-        android:layout_width="@dimen/turn_info_width"
+        android:layout_width="wrap_content"
         android:layout_height="match_parent"
         android:orientation="vertical"
         android:paddingLeft="@dimen/instruction_horizontal_padding">
