--- a/res/layout/route_widget.xml
+++ b/res/layout/route_widget.xml
@@ -62,6 +62,7 @@
             android:layout_height="match_parent"
             android:layout_gravity="top"
             android:paddingLeft="@dimen/routing_footer_left_padding"
+            android:paddingTop="@dimen/default_padding"
             android:background="@color/transparent_white"
             android:orientation="vertical">
 
