--- a/res/layout/instruction.xml
+++ b/res/layout/instruction.xml
@@ -14,6 +14,7 @@
         android:background="@android:color/transparent" />
 
     <LinearLayout
+        android:id="@+id/turn_container"
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
         android:orientation="vertical"
