--- a/res/layout/instruction.xml
+++ b/res/layout/instruction.xml
@@ -66,7 +66,7 @@
         android:maxLines="2"
         android:fontFamily="sans-serif-condensed"
         android:textAlignment="center"
-        android:textColor="@color/brown"
+        android:textColor="@color/red"
         android:textSize="@dimen/medium_2"
         android:paddingLeft="@dimen/instruction_horizontal_padding" />
 
