messing with some UI changes

--- a/res/layout/base.xml
+++ b/res/layout/base.xml
@@ -32,6 +32,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginRight="10dp"
+        android:layout_marginBottom="5dp"
         android:text="@string/osm_attribution"
         android:textSize="@dimen/tiny"
         android:layout_above="@id/pager_results_container"
