--- a/res/layout/instruction.xml
+++ b/res/layout/instruction.xml
@@ -11,7 +11,7 @@
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
         android:paddingLeft="@dimen/arrow_padding"
-        android:background="@color/transparent" />
+        android:background="@color/transparent_white" />
 
     <LinearLayout
         android:id="@+id/turn_container"
