--- a/res/values/colors.xml
+++ b/res/values/colors.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="lets_go_light_blue">#50a4db</color>
-    <color name="lets_go_dark_blue">#007bb2</color>
+    <color name="lets_go_light">#50a4db</color>
+    <color name="lets_go_dark">#007bb2</color>
     <color name="destination_color">@color/red</color>
     <color name="destination_text_color">@android:color/white</color>
     <color name="teal_background">#6da1a5</color>
