--- a/res/drawable/ic_menu_overflow.xml
+++ b/res/drawable/ic_menu_overflow.xml
@@ -2,5 +2,6 @@
 
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
     <item android:state_pressed="true" android:drawable="@drawable/ic_menu_overflow_active" />
+    <item android:state_activated="true" android:drawable="@drawable/ic_menu_overflow_active" />
     <item android:drawable="@drawable/ic_menu_overflow_normal" />
 </selector>
