--- a/res/values/colors.xml
+++ b/res/values/colors.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="lets_go_light">#50a4db</color>
-    <color name="lets_go_dark">#007bb2</color>
+    <color name="lets_go_light">@color/brown</color>
+    <color name="lets_go_dark">@color/dark_brown</color>
     <color name="destination_color">@color/red</color>
     <color name="destination_text_color">@android:color/white</color>
     <color name="teal_background">#6da1a5</color>
@@ -20,6 +20,7 @@
     <color name="light_gray">#898989</color>
     <color name="dark_gray">#444444</color>
     <color name="brown">#563630</color>
+    <color name="dark_brown">#44231e</color>
     <color name="transparent_white">#CCFFFFFF</color>
     <color name="transparent_gray">#CCCECECE</color>
     <color name="transparent_light_gray">#99CECECE</color>
