--- a/res/values/styles.xml
+++ b/res/values/styles.xml
@@ -57,4 +57,29 @@
     <style name="MapzenOverflow" parent="@android:style/Widget.Holo.ActionButton.Overflow">
         <item name="android:src">@drawable/ic_menu_overflow</item>
     </style>
+
+    <style name="LoginTitle" parent="@android:style/Widget.TextView">
+        <item name="android:layout_gravity">center_horizontal</item>
+        <item name="android:layout_marginTop">@dimen/login_title_margin_vertical</item>
+        <item name="android:gravity">center_horizontal</item>
+        <item name="android:fontFamily">sans-serif-condensed-light</item>
+        <item name="android:textAllCaps">true</item>
+        <item name="android:textColor">@color/red</item>
+        <item name="android:textSize">@dimen/medium</item>
+    </style>
+
+    <style name="LoginBody" parent="@android:style/Widget.TextView">
+        <item name="android:layout_gravity">center_horizontal</item>
+        <item name="android:layout_marginBottom">@dimen/login_body_margin_vertical</item>
+        <item name="android:gravity">center_horizontal</item>
+        <item name="android:fontFamily">sans-serif-condensed-light</item>
+        <item name="android:textColor">@color/sign_up_text</item>
+        <item name="android:textSize">@dimen/small</item>
+    </style>
+
+    <style name="LoginLink" parent="LoginBody">
+        <item name="android:textColor">@color/learn_more</item>
+        <item name="android:clickable">true</item>
+    </style>
+
 </resources>
