--- a/res/values/colors.xml
+++ b/res/values/colors.xml
@@ -24,4 +24,10 @@
     <color name="transparent_gray">#CCCECECE</color>
     <color name="transparent_light_gray">#99CECECE</color>
     <color name="transparent_blue">#E66ea0a4</color>
+
+    <!-- ViewPagerIndicator -->
+    <color name="vpi_fill_color">@color/light_gray</color>
+    <color name="vpi_page_color">@android:color/transparent</color>
+    <color name="vpi_stroke_color">@color/light_gray</color>
+
 </resources>
