--- a/res/layout/activity_login.xml
+++ b/res/layout/activity_login.xml
@@ -56,6 +56,11 @@
         android:orientation="vertical"
         android:visibility="invisible">
 
+        <android.support.v4.view.ViewPager
+            android:id="@+id/view_pager"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent" />
+
         <TextView
             android:id="@+id/login_explanation"
             android:layout_width="match_parent"
