--- a/res/layout/activity_login.xml
+++ b/res/layout/activity_login.xml
@@ -10,85 +10,21 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_centerHorizontal="true"
-            android:orientation="vertical">
-
-            <ImageView
-                android:id="@+id/logo"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="@dimen/logo_top_margin"
-                android:layout_gravity="center"
-                android:src="@drawable/ic_open_logo"
-                android:contentDescription="@string/logo_description"
-                android:clickable="true" />
-        </LinearLayout>
-
-        <LinearLayout
-            android:id="@+id/motto"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_alignParentBottom="true"
-            android:paddingBottom="@dimen/motto_bottom_margin">
-
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:textAlignment="center"
-                android:gravity="center"
-                android:textColor="@color/blue"
-                android:fontFamily="sans-serif-condensed"
-                android:textSize="@dimen/motto_font_size"
-                android:text="@string/motto" />
-        </LinearLayout>
-    </RelativeLayout>
-
-    <LinearLayout
-        android:id="@+id/login_layout"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_centerHorizontal="true"
-        android:layout_alignParentBottom="true"
-        android:orientation="vertical"
-        android:visibility="invisible">
-
-        <android.support.v4.view.ViewPager
-            android:id="@+id/view_pager"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent" />
-
-        <TextView
-            android:id="@+id/login_explanation"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:paddingBottom="@dimen/login_text_bottom_padding"
-            android:layout_gravity="center"
-            android:textAlignment="center"
-            android:gravity="center"
-            android:textColor="@color/sign_up_text"
-            android:fontFamily="sans-serif-condensed-light"
-            android:textSize="10pt"
-            android:text="@string/login_explanation" />
-
-        <Button
-            android:id="@+id/login_button"
+        <ImageView
+            android:id="@+id/logo"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:paddingLeft="@dimen/button_side_padding"
-            android:paddingRight="@dimen/button_side_padding"
-            android:paddingTop="@dimen/button_above_below_padding"
-            android:paddingBottom="@dimen/button_above_below_padding"
-            android:layout_gravity="center"
-            android:layout_marginBottom="@dimen/login_text_bottom_padding"
-            android:text="@string/osm_init_login"
-            android:textColor="@android:color/white"
-            android:fontFamily="sans-serif-condensed"
-            android:background="@drawable/signin_button"
-            android:textSize="@dimen/button_font_size" />
-    </LinearLayout>
+            android:layout_centerHorizontal="true"
+            android:layout_centerVertical="true"
+            android:contentDescription="@string/logo_description"
+            android:src="@drawable/ic_open_logo" />
+
+    </RelativeLayout>
+
+    <android.support.v4.view.ViewPager
+        android:id="@+id/view_pager"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:visibility="gone" />
 
 </RelativeLayout>
