Adds circle pager indicator.

--- a/res/layout/activity_login.xml
+++ b/res/layout/activity_login.xml
@@ -27,4 +27,12 @@
         android:layout_height="match_parent"
         android:visibility="gone" />
 
+    <com.viewpagerindicator.CirclePageIndicator
+        android:id="@+id/view_pager_indicator"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_marginBottom="@dimen/default_margin"
+        android:visibility="gone" />
+
 </RelativeLayout>
