--- a/res/layout/login_page_3.xml
+++ b/res/layout/login_page_3.xml
@@ -1,37 +1,54 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:gravity="center_horizontal"
+    android:orientation="vertical"
+    android:paddingLeft="@dimen/login_padding_horizontal"
+    android:paddingRight="@dimen/login_padding_horizontal">
 
-    <ImageView
-        android:id="@+id/logo"
+    <LinearLayout
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_centerHorizontal="true"
-        android:layout_centerVertical="true"
-        android:contentDescription="@string/logo_description"
-        android:src="@drawable/ic_open_logo" />
+        android:layout_height="0dp"
+        android:layout_weight="0.5"
+        android:gravity="center">
 
-    <TextView
-        android:id="@+id/title"
-        android:layout_below="@id/logo"
+        <ImageView
+            android:id="@+id/logo"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:contentDescription="@string/logo_description"
+            android:src="@drawable/ic_open_logo_small" />
+    </LinearLayout>
+
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="@string/login_page_three_title" />
+        android:layout_height="0dp"
+        android:layout_weight="0.5"
+        android:gravity="center"
+        android:orientation="vertical">
 
-    <TextView
-        android:id="@+id/body"
-        android:layout_below="@id/title"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="@string/login_page_three_body" />
+        <TextView
+            android:id="@+id/title"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/login_page_three_title"
+            style="@style/LoginTitle" />
 
-    <TextView
-        android:id="@+id/learn_more"
-        android:layout_below="@id/body"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="@string/login_page_three_learn_more" />
+        <TextView
+            android:id="@+id/body"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/login_page_three_body"
+            style="@style/LoginBody" />
 
-</RelativeLayout>
+        <TextView
+            android:id="@+id/learn_more"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/login_page_three_learn_more"
+            style="@style/LoginLink" />
+    </LinearLayout>
+
+</LinearLayout>
