--- a/res/values/dimens.xml
+++ b/res/values/dimens.xml
@@ -15,9 +15,7 @@
     <dimen name="logo_top_margin">180dp</dimen>
     <dimen name="button_side_padding">16dp</dimen>
     <dimen name="button_above_below_padding">8dp</dimen>
-    <dimen name="motto_bottom_margin">110dp</dimen>
     <dimen name="button_font_size">10pt</dimen>
-    <dimen name="motto_font_size">16pt</dimen>
     <dimen name="result_pager_height">75dp</dimen>
     <dimen name="instruction_height">84dp</dimen>
     <dimen name="arrow_padding">15dp</dimen>
@@ -37,6 +35,7 @@
     <dimen name="login_title_margin_vertical">16dp</dimen>
     <dimen name="login_body_margin_vertical">16dp</dimen>
     <dimen name="login_padding_horizontal">24dp</dimen>
+    <dimen name="login_button_bottom_margin">16dp</dimen>
 
     <!-- fonts -->
     <dimen name="big">32sp</dimen>
@@ -45,4 +44,12 @@
     <dimen name="small_2">18sp</dimen>
     <dimen name="small">15sp</dimen>
     <dimen name="tiny">9sp</dimen>
+
+    <!-- ViewPagerIndicator -->
+    <dimen name="vpi_height">16dp</dimen>
+    <dimen name="vpi_radius">3dp</dimen>
+    <dimen name="vpi_stroke_width">1dp</dimen>
+    <dimen name="vpi_padding">8dp</dimen>
+    <dimen name="vpi_margin_bottom">16dp</dimen>
+
 </resources>
