--- a/res/layout/fragment_search_results.xml
+++ b/res/layout/fragment_search_results.xml
@@ -40,6 +40,7 @@
         <include layout="@layout/divider"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginLeft="@dimen/location_divider_padding"
             android:layout_marginRight="@dimen/location_divider_padding"
             android:layout_below="@id/view_all" />
     </RelativeLayout>
