--- a/res/layout/direction_list_item.xml
+++ b/res/layout/direction_list_item.xml
@@ -19,13 +19,17 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_weight=".70"
-        android:layout_gravity="left" />
+        android:layout_gravity="left"
+        android:padding="@dimen/default_padding_list_item"
+        android:fontFamily="sans-serif-condensed-bold"
+        android:textColor="@color/blue"
+        android:textSize="@dimen/medium" />
 
     <com.mapzen.open.widget.DistanceView
         android:id="@+id/distance"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="right"
-        android:textColor="#ccc" />
+        android:textColor="@color/light_gray" />
 
 </LinearLayout>
