--- a/res/values/styles.xml
+++ b/res/values/styles.xml
@@ -77,6 +77,7 @@
         <item name="android:textColor">@color/dark_gray</item>
         <item name="android:textColor">@color/sign_up_text</item>
         <item name="android:textSize">@dimen/small_2</item>
+        <item name="android:lineSpacingMultiplier">1.2</item>
     </style>
 
     <style name="LoginLink" parent="LoginBody">
