--- a/res/values/styles.xml
+++ b/res/values/styles.xml
@@ -63,7 +63,7 @@
         <!-- <item name="android:layout_marginTop">@dimen/login_title_margin_vertical</item> -->
         <item name="android:gravity">center_horizontal</item>
         <item name="android:fontFamily">sans-serif-condensed-light</item>
-        <item name="android:textAllCaps">true</item>
+        <!-- <item name="android:textAllCaps">true</item> -->
         <item name="android:textColor">@color/red</item>
         <item name="android:textSize">@dimen/medium_2</item>
         <item name="android:paddingBottom">@dimen/button_above_below_padding</item>
@@ -77,7 +77,7 @@
         <item name="android:textColor">@color/dark_gray</item>
         <item name="android:textColor">@color/sign_up_text</item>
         <item name="android:textSize">@dimen/small_2</item>
-        <item name="android:lineSpacingMultiplier">1.2</item>
+        <item name="android:lineSpacingMultiplier">1.1</item>
     </style>
 
     <style name="LoginLink" parent="LoginBody">
