--- a/res/values/styles.xml
+++ b/res/values/styles.xml
@@ -60,13 +60,11 @@
 
     <style name="LoginTitle" parent="@android:style/Widget.TextView">
         <item name="android:layout_gravity">center_horizontal</item>
-        <!-- <item name="android:layout_marginTop">@dimen/login_title_margin_vertical</item> -->
         <item name="android:gravity">center_horizontal</item>
         <item name="android:fontFamily">sans-serif-condensed-light</item>
         <item name="android:textAllCaps">true</item>
         <item name="android:textColor">@color/red</item>
         <item name="android:textSize">@dimen/medium_2</item>
-        <!-- <item name="android:paddingBottom">@dimen/button_above_below_padding</item> -->
     </style>
 
     <style name="LoginBody" parent="@android:style/Widget.TextView">
@@ -83,6 +81,7 @@
     <style name="LoginLink" parent="LoginBody">
         <item name="android:textColor">@color/red</item>
         <item name="android:clickable">true</item>
+        <item name="android:paddingBottom">@dimen/button_above_below_padding</item>
     </style>
 
 </resources>
