--- a/res/layout/login_header.xml
+++ b/res/layout/login_header.xml
@@ -9,7 +9,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
-        android:layout_centerVertical="true"
+        android:layout_marginTop="200dp"
         android:contentDescription="@string/logo_description"
         android:src="@drawable/ic_open_logo" />
 
