--- a/res/layout/login_page_3.xml
+++ b/res/layout/login_page_3.xml
@@ -9,24 +9,11 @@
     android:paddingRight="@dimen/login_padding_horizontal">
 
     <LinearLayout
-        android:layout_width="wrap_content"
-        android:layout_height="0dp"
-        android:layout_weight="0.5"
-        android:gravity="center">
-
-        <ImageView
-            android:id="@+id/logo"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:contentDescription="@string/logo_description"
-            android:src="@drawable/ic_open_logo_small" />
-    </LinearLayout>
-
-    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="0.5"
-        android:gravity="center"
+        android:gravity="bottom"
+        android:layout_marginBottom="30dp"
         android:orientation="vertical">
 
         <TextView
