renaming key for view tag

--- a/res/values/integers.xml
+++ b/res/values/integers.xml
@@ -10,5 +10,5 @@
 
     <integer name="number_of_locations_for_average_speed">3</integer>
 
-    <integer name="pelias_doc_store">6656</integer>
+    <integer name="pelias_doc_id">1</integer>
 </resources>
